HelloUltraviolet/Fixtures/RejectedSource/Statements/FrameNoActiveRegion/Expected.uv
//! Expected diagnostic metadata for the FrameNoActiveRegion rejected-source specimen.

expectedDiagnostic("", "rule.18.Frame-NoActiveRegion-Err")
